RESOLVED FIXED267696
Missing WebRTC stats in Safari
https://bugs.webkit.org/show_bug.cgi?id=267696
Summary Missing WebRTC stats in Safari
Kaustav
Reported 2024-01-18 05:39:40 PST
These following important WebRTC stats are missing in Safari. Could you please add these? inbound-rtp: qpSum, rtxSsrc, fecSsrc, decoderImplementation outbound-rtp: rtxSsrc, scalabilityMode, encoderImplementation data-channel: dataChannelIdentifier local-candidate: foundation, usernameFragment, tcpType remote-candidate: foundation, usernameFragment, tcpType
Attachments
Kaustav
Comment 1 2024-01-18 08:56:11 PST
two more stats local-candidate: relayProtocol remote-candidate: relayProtocol
[MSFT] Diego Perez Botero
Comment 2 2024-01-18 09:10:55 PST
Bonus points for the rest of the FEC stats (already implemented in Chromium's libWebRTC) inbound-rtp: fecBytesReceived, fecPacketsReceived, fecPacketsDiscarded
Radar WebKit Bug Importer
Comment 3 2024-01-25 05:40:18 PST
youenn fablet
Comment 4 2024-01-26 06:25:55 PST
For qpSum and scalabilityMode, we need to pipe the info of the remote decoder/encoder to libwebrtc. I filed https://bugs.webkit.org/show_bug.cgi?id=268155 to keep track of this one. I do not think we want to expose decoderImplementation/encoderImplementation at this point. Media Capabilities can be used to check whether it should be powerEfficient or not, which should in general match whether VTB is used or not.
youenn fablet
Comment 5 2024-01-26 06:32:17 PST
EWS
Comment 6 2024-01-28 23:24:19 PST
Committed 273643@main (7b5229864801): <https://commits.webkit.org/273643@main> Reviewed commits have been landed. Closing PR #23300 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.