Missing WebRTC stats in Safari https://bugs.webkit.org/show_bug.cgi?id=267696 rdar://121594743

Reviewed by Eric Carlson.

Update datachannelid to dataChannelIdentifier name, as per spec.
Expose more RTC stats by exposing libwebrtc backend gathered values.

* LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-mandatory-getStats.https-expected.txt:
* LayoutTests/webrtc/candidate-stats.html:
* LayoutTests/webrtc/datachannel/datachannel-stats.html:
* LayoutTests/webrtc/video-stats-expected.txt:
* LayoutTests/webrtc/video-stats.html:
* Source/WebCore/Modules/mediastream/RTCStatsReport.h:
* Source/WebCore/Modules/mediastream/RTCStatsReport.idl:
* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCStatsCollector.cpp:
(WebCore::fillInboundRtpStreamStats):
(WebCore::fillOutboundRtpStreamStats):
(WebCore::fillRTCDataChannelStats):
(WebCore::fillRTCIceCandidateStats):

Canonical link: https://commits.webkit.org/273643@main